pkg/check/testdata/ub/types/invalid/named-configuration-unknown-field.ub
factory: {
  imports: { aws: 'github.com/example/aws' }
  configurations: {
    east: aws { regin: 'oops' }
  }
}
